--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.12.0",
+    "cookie-universal-nuxt": "^2.1.4",
     "nuxt": "^2.14.0"
   },
   "devDependencies": {}
