--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.12.0",
     "cookie-universal-nuxt": "^2.1.4",
-    "nuxt": "^2.14.0"
+    "node-sass": "^4.14.1",
+    "nuxt": "^2.14.0",
+    "sass-loader": "^9.0.3"
   },
   "devDependencies": {}
 }
